fixed mobile menu social link overlap

--- a/assets/component-localization-form.css
+++ b/assets/component-localization-form.css
@@ -297,6 +297,13 @@ noscript .localization-selector.link {
 
 .menu-drawer__localization + .list-social {
   margin-top: 1rem;
+  margin-bottom: 5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-drawer__localization + .list-social {
+    margin-bottom: 0;
+  }
 }
 
 .menu-drawer__localization noscript .localization-form__select {
